--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box}body{background-color:#faebd7}
+@media screen and (min-width: 640px){.product{grid-column:span 6}}@media screen and (min-width: 767px){.product{grid-column:span 4}}@media screen and (min-width: 1024px){.product{grid-column:span 3}}*{box-sizing:border-box}#products-list{display:grid;grid-template-columns:repeat(12, 1fr)}footer{background-color:#deb887}
