--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,24 @@
+@media screen and (min-width: 640px) {
+    @import "_mobile";
+}
+
+@media screen and (min-width: 767px) {
+    @import "tablet";
+}
+
+@media screen and (min-width: 1024px) {
+    @import "desktop";
+}
+
 * {
     box-sizing: border-box;
   }
 
-body {
-    background-color: antiquewhite;
+#products-list {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+footer {
+    background-color: burlywood;
 }
