--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,13 @@
     grid-template-columns: repeat(12, 1fr);
 }
 
+img {
+    border: 4px solid green; //ta bort senare
+    height: 70%;
+    max-width: 100%;
+    object-fit: cover;
+}
+
 footer {
     background-color: burlywood;
 }
