added temporary background color for cart

--- a/css/style.scss
+++ b/css/style.scss
@@ -14,7 +14,12 @@
     box-sizing: border-box;
 }
 
-h2 {
+.cart {
+    padding: 10px;
+    background-color: rgb(255, 245, 171);
+}
+
+main h2 {
     display: inline;
 }
 
