--- a/css/style.scss
+++ b/css/style.scss
@@ -1,17 +1,29 @@
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 375px) {
     @import "_mobile";
 }
 
 @media screen and (min-width: 767px) {
-    @import "tablet";
+    @import "_tablet";
 }
 
 @media screen and (min-width: 1024px) {
-    @import "desktop";
+    @import "_desktop";
 }
 
 * {
     box-sizing: border-box;
+}
+
+img {
+    border: 4px solid green; //ta bort senare
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h1 {
+    font-family: "Merienda", sans-serif;
+    font-size: 2rem;
 }
 
 .cart {
@@ -23,16 +35,14 @@ main h2 {
     display: inline;
 }
 
-#products-list {
+.products-list {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
 }
 
-img {
-    border: 4px solid green; //ta bort senare
-    height: 70%;
-    max-width: 100%;
-    object-fit: cover;
+.product {
+    justify-items: center;
+    text-align: center;
 }
 
 .sort {
@@ -48,4 +58,46 @@ img {
 
 footer {
     background-color: burlywood; //ta bort senare
+}
+
+.place-order {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 10px;
+    justify-items: center;
+    font-size: 1rem;
+    padding-bottom: 20px;
+
+    label {
+        justify-items: center;
+        row-gap: 10px;
+
+        span {
+            display: inline-flex;
+        }
+    }
+
+    .payment-option {
+        display: flex;
+    }
+
+}
+
+address {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: blanchedalmond;
+
+    a {
+        display: flex;
+        color: black;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 1rem;
+        font-style: normal;
+
+        .material-symbols-outlined {
+            position: absolute;
+        }    
+    }
 }
