--- a/css/style.scss
+++ b/css/style.scss
@@ -14,8 +14,12 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 img {
-    border: 4px solid green; //ta bort senare
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -28,18 +32,20 @@ h1 {
 
 .cart {
     padding: 10px;
-    background-color: rgb(255, 245, 171);
+    background-color: rgb(244, 213, 240);
 
     .add-order {
         display: block;
         position: relative;
         margin-top: 10px;
+        background-color: rgb(255, 255, 255);
+        padding-top: 5px;
+        padding-bottom: 5px;
     }
 }
 
 main h2 {
    padding-top: 15px;
-   margin-left: 5px;
 }
 
 .products-list {
@@ -65,7 +71,6 @@ main h2 {
     position: relative;
     display: flex;
     justify-content: end;
-    bottom: 15px;
     
     .sort-price, .sort-rating {
         margin-inline: 5px;
@@ -73,12 +78,13 @@ main h2 {
 
     .sort-price, .sort-rating, .sort-alpha, .sort-category {
         color: rgb(0, 0, 0);
-        background-color: rgb(252, 252, 236);
+        background-color: rgb(241, 231, 240);
+        border: none;
     }
 }
 
 footer {
-    background-color: burlywood; //ta bort senare
+    background-color: rgb(246, 211, 242); //ta bort senare
 }
 
 .place-order {
@@ -107,7 +113,7 @@ footer {
 address {
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: blanchedalmond;
+    background-color: rgb(241, 231, 240);
 
     a {
         display: flex;
