--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -11,7 +11,10 @@ main h2 {
   font-size: 1rem;
 }
 
-.sort-price, .sort-rating, .sort-alpha, .sort-category {
+.sort-price, 
+.sort-rating, 
+.sort-alpha, 
+.sort-category {
   padding-left: 3px;
   padding-right: 3px;
   margin-top: 5px;
