added function to validate payment  and enable order-button

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -60,9 +60,9 @@ main h2 {
     width: 90px;
   }
 
-  .payment-option {
-    width: 241px;
-  }
+  // .payment-option {
+  //   width: 241px;
+  // }
 
   .approve-info span {
     width: 217px;
