--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+.hidden {
+  display: none;
+}
+
 @media screen and (min-width: 375px) {
   @import "_mobile";
 }
@@ -105,9 +109,13 @@ footer {
     }
   }
 
-  .payment-option {
-    display: flex;
-  }
+  // .payment-option {
+  //   display: flex;
+  // }
+}
+
+.payment-option label span {
+  display: inline;
 }
 
 address {
