--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -1,23 +1,31 @@
 h1 {
   justify-self: center;
+  font-size: 2rem;
 }
 
 main h2 {
   justify-self: center;
   font-size: 1.3rem;
+  padding-top: 15px;
 }
 
-.sort .material-symbols-outlined {
-  font-size: 1rem;
-}
+.sort {
+  position: relative;
+  display: flex;
+  justify-content: end;
+  
+  .material-symbols-outlined {
+    font-size: 1rem;
+  }
 
-.sort-price, 
-.sort-rating, 
-.sort-alpha, 
-.sort-category {
-  padding-left: 3px;
-  padding-right: 3px;
-  margin-top: 5px;
+  .sort-price, 
+  .sort-rating, 
+  .sort-alpha, 
+  .sort-category {
+    padding-left: 3px;
+    padding-right: 3px;
+    margin-top: 5px;
+  }
 }
 
 .cart {
