--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -1,3 +1,38 @@
+h1 {
+  font-size: 3rem;
+}
+
+.cart {
+  margin-bottom: 40px;
+}
+
+main h2 {
+  font-size: 2.1rem;
+  margin-left: 10px;
+}
+
+.sort {
+  display: inline-flex;
+  right: -28%;
+
+
+  .material-symbols-outlined {
+    font-size: 1.5rem;
+  }
+
+  .sort-price, 
+  .sort-rating, 
+  .sort-alpha, 
+  .sort-category {
+    padding-inline: 4px;
+    margin-bottom: 20px;
+  }
+}
+
+.products-list {
+  margin-top: 20px;
+}
+
 .product {
   grid-column: span 3;
   font-size: 1.2rem;
@@ -9,7 +44,7 @@
     
   img {
     width: 90%;
-    height: 55%;
+    height: 50%;
   }
     
   h3 {
@@ -20,3 +55,4 @@
     font-size: 1rem;
   }
 }
+
