--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -2,30 +2,15 @@ h1 {
   font-size: 3rem;
 }
 
-.cart {
-  margin-bottom: 40px;
-}
-
 main h2 {
   font-size: 2.1rem;
-  margin-left: 10px;
 }
 
 .sort {
-  display: inline-flex;
-  right: -28%;
-
+  top: -20px;
 
   .material-symbols-outlined {
     font-size: 1.5rem;
-  }
-
-  .sort-price, 
-  .sort-rating, 
-  .sort-alpha, 
-  .sort-category {
-    padding-inline: 4px;
-    margin-bottom: 20px;
   }
 }
 
@@ -43,7 +28,6 @@ main h2 {
   }
     
   img {
-    width: 90%;
     height: 50%;
   }
     
