added style for order confirmation, start of payment options

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -40,3 +40,12 @@ main h2 {
   }
 }
 
+.place-order label,
+.place-order input,
+.payment-option,
+.payment-option input {
+  font-size: 1.2rem;
+}
+
+
+
