--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -44,3 +44,12 @@ main h2 {
     height: 55%;
   }
 }
+
+.place-order label,
+.payment-option {
+  font-size: 1.1rem;
+}
+
+.small {
+  width: 50px;
+}
