--- a/css/style.scss
+++ b/css/style.scss
@@ -93,6 +93,13 @@ footer {
   }
 }
 
+.order-confirmation {
+  background-color: #805c7c;
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
 .payment-option label span {
   display: inline;
 }
