added margin on top for payment option

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -90,6 +90,7 @@ main h2 {
     background-color: rgb(184, 198, 199);
     border-radius: 8px;
     border: 1px solid rgb(124, 163, 164);
+    margin-top: 10px;
 
     .selector {
       margin: 5px;
