fixed border style and color on sort buttons

--- a/css/style.scss
+++ b/css/style.scss
@@ -46,8 +46,8 @@ h1 {
   .sort-category {
     color: rgb(0, 0, 0);
     background-color: rgb(241, 231, 240);
-    border-color: rgb(241, 231, 240);
-    border-style: 2px ridge;
+    border-style: outset;
+    border-color: rgb(237, 226, 236);
     cursor: pointer;
   }
 }
