--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -165,9 +165,17 @@ main h2 {
   font-size: 1rem;
   padding-bottom: 20px;
 
+  article {
+    justify-items: center;
+  }
+
+  span {
+    display: block;
+    margin-inline: 20px;
+  }
+
   h3 {
     font-size: 1.3rem;
-    justify-self: center;
   }
 }
 
