--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -77,6 +77,11 @@ main h2 {
     margin-top: 15px;
     width: 400px;
   }
+
+  .error {
+    width: 90px;
+    font-size: 1rem;
+  }
 }
 
 .card-date-year {
