--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -168,7 +168,8 @@ main h2 {
 
 .order-confirmation article {
   font-size: 1rem;
-  padding-block: 18px;
+  padding-top: 12px;
+  padding-bottom: 27px;
   justify-items: center;
 
   span {
