--- a/css/_base.scss
+++ b/css/_base.scss
@@ -5,7 +5,7 @@
 .hidden {
   display: none;
 }
-  
+
 a {
   text-decoration: none;
   color: black;
@@ -17,8 +17,20 @@ img {
   margin-right: auto;
 }
 
+.header-container {
+  position: relative;
+  text-align: center;
+
+  img {
+    filter: brightness(80%);
+  }
+}
+
 h1 {
   font-family: "Merienda", sans-serif;
+  position: absolute;
+  color: whitesmoke;
+  z-index: 1;
 }
 
 .cart {
